# basics
AC_INIT(pyflag.in)

# Store the configuration in this header
AC_CONFIG_HEADER(src/include/config.h)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(pyflag, 0.86RC1)

# check standard stuff
AC_PROG_LIBTOOL
AC_PROG_CC

# check headers
AC_CHECK_HEADER(zlib.h,,AC_MSG_ERROR([You Must install zlib-dev to build pyflag]))
AC_CHECK_HEADER(magic.h,,AC_MSG_ERROR([You Must install libmagic-dev to build pyflag this may be part of file the package for some distros]))
AC_CHECK_HEADER(GeoIP.h,have_geoip=yes,AC_MSG_WARN([please install libgeoip-dev for ip geolocation]))
AC_CHECK_HEADER(jpeglib.h,have_libjpeg=yes,AC_MSG_WARN([please install libjpeg62-dev for jpeg carving]))

## This doesnt work - why?
#AC_CHECK_LIB(extractor, EXTRACTOR_getKeywords,AC_MSG_WARN([If you install libextractor, you may find more metadata about your files - this is highly recommended, but optional. Under debian/ubuntu this requires libextractor-dev and python-ctypes]))

#AC_CHECK_LIB(GeoIP, GeoIP_new, AM_CONDITIONAL(HAVE_GEOIP, true))

AM_CONDITIONAL(HAVE_GEOIP, test "$have_geoip" = yes)
AM_CONDITIONAL(HAVE_LIBJPEG, test "$have_libjpeg" = yes)

# python checks 
# (requires autoconf 1.5+ and the macros in acinclude.m4)
AM_PATH_PYTHON([2.5])
AC_PYTHON_DEVEL()

AC_PYTHON_MODULE(MySQLdb, REQUIRED, [ You must install the python-mysql package ])
AC_PYTHON_MODULE(pexpect, REQUIRED, [ You must install the python-pexpect package ])
AC_PYTHON_MODULE(PIL, REQUIRED, [ You must install the python-imaging package ])
AC_PYTHON_MODULE(dateutil, REQUIRED, [ You must install the python-dateutil package ])

# check for binaries
AC_PATH_PROG([MYSQL], mysql)

# try to find magic files
AC_ARG_WITH(magic, AC_HELP_STRING([--with-magic], [specify a colon-separated list of system magic files, default autodetect]),,[magic=$(file -v | tail -1 | awk '{print $4}')])
AC_SUBST(magic)
            

# defines and output
AC_DEFINE([__DEBUG__], [], [Debuging enabled])

# endianess support
AC_C_BIGENDIAN()

# Large file support
AC_SYS_LARGEFILE
AC_OUTPUT([ 
	Makefile 
	src/Makefile 
	src/pyflag/Makefile 
	src/lib/Makefile 
	src/lib/libsgzip/Makefile
	src/lib/libewf/Makefile
	src/lib/libewf/libewf/Makefile
	src/lib/libewf/ewftools/Makefile
	src/lib/libiosubsys/Makefile
	src/remote/Makefile
	src/mmedia/Makefile
	src/mailtools/Makefile 
	src/indextools_ng/Makefile
	src/network/Makefile
	src/filesystems/Makefile
	src/filesystems/sleuthkit/Makefile
	src/filesystems/sleuthkit/auxtools/Makefile
	src/filesystems/sleuthkit/imgtools/Makefile
	src/filesystems/sleuthkit/fstools/Makefile
	src/filesystems/sleuthkit/mmtools/Makefile
	src/filesystems/sleuthkit/python/Makefile
	src/filesystems/magic/Makefile
	src/include/Makefile
	debian/Makefile
	])
